--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
-    <h1>Embedded Style Sample testing</h1>
+    <h1>Kufsi is a goat</h1>
     <h2>Next Line</h2>
   </body>
 </html>
