--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
-    <title>Embedded Style Sample</title>
+    <title>Kufsi</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <h1>Kufsi is a goat</h1>
-    <h2>test</h2>
+    <h1></h1>
+    <h2></h2>
   </body>
 </html>
