--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <html>
   <head>
     <title>Kufsi</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <head profile="https://media.discordapp.net/attachments/739105199125430351/739105324992299018/bape4.png">
-    <link rel= "icon"
-      type= "image/png"
+    <link rel="shortcut icon" type="image/png" href="img/favicon.img:>
       href="http://example.com/myicon.png">
   </head>
   <body>
