--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Kufsi</title>
     <link rel="shortcut icon" type="image/png" href="img/favicon.img:>
       href="http://example.com/myicon.png">
+      <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <h1></h1>
