--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <html>
   <head>
     <title>Kufsi</title>
-    <link rel="shortcut icon" type="image/png" href="img/favicon.img:>
-      href="http://example.com/myicon.png">
+      <link rel="shortcut icon" type="image/png" href="img/favicon.png"
       <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <h1></h1>
+    <h1>Testing</h1>
     <h2></h2>
   </body>
 </html>
