Updated Color, Updated Favicon

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Kufsi</title>
       <link rel="stylesheet" type="text/css" href="style.css">
+      <link rel="shortcut_icon" href="desktop/favicon.ico">
   </head>
   <body>
     <h1>Testing</h1>
